# fgauge

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CMakeModules/: FindosgQOpenGL.cmake
data/ui/: CMakeLists.txt  mainwindow.ui  menubar.xml
data/ui/menus/: file.ui
src/: CMakeLists.txt  application.cxx  application.hxx  command.cxx  command.hxx  commands.cxx  commands.hxx  logging.cxx  logging.hxx  main.cxx  mainwindow.cxx  mainwindow.hxx  menubar.cxx  menubar.hxx  menus.cxx  menus.hxx  project.cxx  project.hxx  singleton.hxx  uiloader.cxx  uiloader.hxx  utils.cxx  utils.hxx
